@@ -1,5 +1,8 @@
 $NetBSD: distinfo,v 1.30 2011/06/01 09:57:23 adam Exp $
 
+SHA1 (2011-006-patch-r18.txt) = 30b66b6c5dce537d66874ac58e622b3f6e992ac6
+RMD160 (2011-006-patch-r18.txt) = 829a6d2dc876190996e90e0a6a43e2d018cbaaa5
+Size (2011-006-patch-r18.txt) = 2908 bytes
 SHA1 (krb5-1.8.4-signed.tar) = fe1fc21e923ae8dcaa7a26f4f97e0ac49c8e3115
 RMD160 (krb5-1.8.4-signed.tar) = 34d6df8248007bac0321400b2650c2aca774af16
 Size (krb5-1.8.4-signed.tar) = 11642880 bytes
